# Larvixon

./: .gitignore  README.md  main.py  pyproject.toml
dataset/: data.yaml
dataset/train/: labels.cache
dataset/train/labels/: 100400.txt  1004000.txt  100529000.txt  10070100.txt  10130400.txt  102000.txt  1025100.txt  10251000.txt  10311300.txt  10371600.txt  104044000.txt  10431900.txt  10492200.txt  1054200.txt  10545000.txt  105450000.txt  10612800.txt  10673100.txt  10733400.txt  108000.txt  1085400.txt  10854000.txt  108965000.txt  10914300.txt  109668000.txt  11034900.txt  110371000.txt  1104400.txt  11095200.txt  11155500.txt  111777000.txt  1122800.txt  11336400.txt  11396700.txt  114000.txt  1145700.txt  11457000.txt  1154600.txt  11577600.txt  115995000.txt  (+478 more)
dataset/valid/: labels.cache
dataset/valid/labels/: 12000.txt  13_png.rf.2d3833468c09d1ac0d272f211e1ca952.txt  14000.txt  16000.txt  16_png.rf.52ea21f0904ccf7de9572c28ecc6cffa.txt  19_png.rf.402ee45540895010446335f3e2114fe1.txt  2_png.rf.d48e853f0690f0ba3df03dfcd5d4e996.txt  4000.txt  4_png.rf.73eafd512920866f47a81e8528d98877.txt  8000.txt  9_png.rf.3dd5397cc6d444891136ef71e11aae22.txt  frame_00012_jpg.rf.be0007b8c471acbc29a6796b1d3a5568.txt  frame_00013_jpg.rf.52786879d6c50f828666b5f749fe6cab.txt  frame_00055_jpg.rf.9b987030ad4ce4a3fa72838b985bb378.txt  frame_00075_jpg.rf.9b3e2c44fecea73bb3de039648f7cf76.txt  frame_00079_jpg.rf.4cb37abeed12c5928fa0b0e5581c40e3.txt  frame_00080_jpg.rf.3c62f2ee366d541a1f7503b610f21174.txt  (+17 more)
larvixon_ai/: callbacks.py  cut_mp4.py  layout.py  nlp_response.py
