[tool.poetry]
name = "larvixon-ai"
version = "0.1.0"
description = ""
authors = ["Wojtek Rybacki <wojciech.rybacki47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.0"
numpy = "^1.26.4"
dash-mantine-components = "0.13.0a2"
dash-bootstrap-components = "^1.6.0"
torch = "^2.3.0"
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
scipy = "^1.13.1"
pyyaml = "^6.0.1"
py-cpuinfo = "^9.0.0"
psutil = "^5.9.8"
seaborn = "^0.13.2"
torchvision = "^0.18.0"
ultralytics = "^8.2.26"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
